# ferox

./: CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  TODO.md  build.rs  pgclient.exe.manifest
.github/promotion/: devto.md  hackernews.md  reddit-postgresql.md  reddit-rust.md
.github/workflows/: release.yml
scripts/: release.sh
src/: CLAUDE.md  ai.rs  app.rs  config.rs  history.rs  i18n.rs  logger.rs  main.rs
src/db/: connection.rs  metadata.rs  mod.rs  query.rs  ssh.rs
src/ui/: CLAUDE.md  autocomplete.rs  connection_dialog.rs  dashboard.rs  er_diagram.rs  explain.rs  join_builder.rs  mod.rs  query_panel.rs  result_table.rs  schema_diff.rs  sidebar.rs  syntax.rs  tab_manager.rs  table_dialog.rs
