[package]
name = "ferox"
version = "0.1.0"
edition = "2021"
description = "Blazing-fast lightweight PostgreSQL client built in Rust"
authors = []

[[bin]]
name = "ferox"
path = "src/main.rs"

[dependencies]
# GUI
eframe = { version = "0.27", features = ["default"] }
egui = "0.27"
egui_extras = { version = "0.27" }

# PostgreSQL
tokio-postgres = { version = "0.7", features = ["with-chrono-0_4", "with-serde_json-1"] }
native-tls = "0.2"
postgres-native-tls = "0.5"

# Async runtime
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }

# Config / serialization
serde = { version = "1", features = ["derive"] }
toml = "0.8"
serde_json = "1"

# Error handling
anyhow = "1"
thiserror = "1"

# SQL syntax highlighting
syntect = { version = "5", default-features = false, features = ["default-syntaxes", "default-themes", "parsing", "regex-fancy"] }
once_cell = "1"

# Native file dialog
rfd = "0.14"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
hex = "0.4"
sqlformat = "0.2"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"

[profile.dev]
opt-level = 1

[dev-dependencies]
tokio-test = "0.4"

# Windows-only build deps (manifest + icon embedding)
[target.'cfg(windows)'.build-dependencies]
winresource = "0.1"
