[package]
name = "ferox"
version = "0.2.7"
edition = "2024"
description = "Blazing-fast lightweight PostgreSQL client built in Rust"
authors = []

[[bin]]
name = "ferox"
path = "src/main.rs"

[dependencies]
# GUI — accesskit (screen-reader support) disabled to save RAM
eframe = { version = "0.29", default-features = false, features = ["glow", "default_fonts"] }
egui = { version = "0.29", default-features = false, features = ["default_fonts"] }
egui_extras = { version = "0.29", default-features = false }

# PostgreSQL — type-conversion features not needed (simple_query returns plain strings)
tokio-postgres = { version = "0.7" }
native-tls = "0.2"
postgres-native-tls = "0.5"

# Async runtime — rt-multi-thread not needed; DB worker uses its own current_thread rt
tokio = { version = "1", features = ["rt", "macros", "sync", "time"] }

# Config / serialization
serde = { version = "1", features = ["derive"] }
toml = "0.8"
serde_json = "1"

# Error handling
anyhow = "1"
thiserror = "1"



# Native file dialog
rfd = "0.14"

# SSH tunnel
russh = "0.44"
russh-keys = "0.44"
async-trait = "0.1"

# Icon loading
image = { version = "0.24", default-features = false, features = ["png"] }

# HTTP client for Claude AI API
reqwest = { version = "0.12", default-features = false, features = ["json", "native-tls"] }

# Utilities
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
hex = "0.4"
sqlformat = "0.2"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"

[profile.dev]
opt-level = 1

[dev-dependencies]
tokio-test = "0.4"

# Build deps — icon generation
[build-dependencies]
image = { version = "0.24", default-features = false, features = ["png"] }
ico = "0.3"

# Windows-only build deps (manifest + icon embedding)
[target.'cfg(windows)'.build-dependencies]
winresource = "0.1"
